<resources>
    <string name="app_name">PrimeraApp</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Primer fragmento</string>
    <string name="second_fragment_label">Segundo fragmento</string>
    <string name="next">Siguiente</string>
    <string name="previous">Anterior</string>

    <string name="magic_button">Magia</string>

    <string name="string_button">Este es el texto del botón 1</string>
    <string name="string_button2">Este es el botón 2</string>
    <string name="string_button3">3</string>

    <string name="hello_first_fragment">Hola Mundo!!</string>
    <string name="hello_second_fragment">Hola Mundo, este es el segundo fragmento.</string>
</resources>